modules/ec2/main.tf
resource "aws_security_group" "this" {
  vpc_id = var.vpc_id

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    security_groups = [var.alb_sg]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "this" {
  ami           = var.ami
  instance_type = var.instance_type

  subnet_id = var.subnet_id

  associate_public_ip_address = true

  vpc_security_group_ids = [aws_security_group.this.id]

  key_name = "my-key"

  # ✅ AGORA USANDO TEMPLATEFILE (CORRETO)
  user_data = templatefile("${path.module}/user_data.sh", {
    db_host     = var.db_host
    db_user     = var.db_user
    db_password = var.db_password
    db_name     = var.db_name
  })

  # 🔥 GARANTE RECRIAÇÃO SE USER_DATA MUDAR
  user_data_replace_on_change = true

  tags = {
    Name = "node-ec2"
  }
}


output "sg_id" {
  value = aws_security_group.this.id
}
